--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -44,8 +44,9 @@
   "PrivacyDetails" : "توضح سياسة الخصوصية الخاصة بنا كيفية جمع معلوماتك الشخصية واستخدامها وحمايتها عند استخدام خدماتنا. نحن ملتزمون بحماية خصوصيتك وضمان أمان بياناتك.",
   "and": ", و ",
   "cookiesPolicy" : "اتفاقية ملفات تعريف الارتباط",
-  "cookiesDetails" : "تشرح سياسة ملفات تعريف الارتباط الخاصة بنا كيف نستخدم ملفات تعريف الارتباط والتقنيات المشابهة لتحسين تجربة التصفح لديك وتحسين خدماتنا. نحن نستخدم ملفات تعريف الارتباط للتحليلات والتخصيص والإعلانات المستهدفة."
-
+  "cookiesDetails" : "تشرح سياسة ملفات تعريف الارتباط الخاصة بنا كيف نستخدم ملفات تعريف الارتباط والتقنيات المشابهة لتحسين تجربة التصفح لديك وتحسين خدماتنا. نحن نستخدم ملفات تعريف الارتباط للتحليلات والتخصيص والإعلانات المستهدفة.",
+  "LoginFail" : "فشل تسجيل الدخول",
+  "Close" : "يغلق"
 
 
 }
