--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -44,6 +44,6 @@
   "PrivacyDetails" : "Our Privacy Policy outlines how we collect, use, and protect your personal information when you use our services. We are committed to safeguarding your privacy and ensuring the security of your data.",
   "and": ", and ",
   "cookiesPolicy" : "Cookies Policy",
-  "cookiesDetails" : "Our Cookies Policy explains how we use cookies and similar technologies to enhance your browsing experience and improve our services. We use cookies for analytics, personalization, and targeted advertising."
-
-}
+  "cookiesDetails" : "Our Cookies Policy explains how we use cookies and similar technologies to enhance your browsing experience and improve our services. We use cookies for analytics, personalization, and targeted advertising.",
+  "LoginFail" : "Login Failed",
+  "Close" : "Close"}
