--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -46,7 +46,36 @@
   "cookiesPolicy" : "اتفاقية ملفات تعريف الارتباط",
   "cookiesDetails" : "تشرح سياسة ملفات تعريف الارتباط الخاصة بنا كيف نستخدم ملفات تعريف الارتباط والتقنيات المشابهة لتحسين تجربة التصفح لديك وتحسين خدماتنا. نحن نستخدم ملفات تعريف الارتباط للتحليلات والتخصيص والإعلانات المستهدفة.",
   "LoginFail" : "فشل تسجيل الدخول",
-  "Close" : "يغلق"
-
+  "Close" : "يغلق",
+  "LearningPlatformApp" : "تطبيق منصة التعلم",
+  "WelcomeBack" : "مرحبًا بعودتك",
+  "StartLeaning" : "ابدأ التعلم الآن!",
+  "Categories" : "تصنيفات",
+  "MViewCourse" : "الدورات الأكثر مشاهدة",
+  "LatestCAdded" : "أحدث دورة المضافة",
+  "ForYou" : "اخترنا لك",
+  "PersonalInfo" : "معلومات شخصية",
+  "LogOut" : "تسجيل خروج",
+  "SeeMore" : "المزيد",
+  "RecommendCFY" :"الدورات المقترحة لك",
+  "AllCategories" : "جميع التصنيفات",
+  "AllInstructor" : "جميع المدربين",
+  "NoCategoriesAvailable" : "لا توجد تصنيفات متاحة",
+  "GoBack" : "ارجع",
+  "NoCourseAvailable" : "لا توجد دورة متاحة",
+  "HomePage" : "الصفحة الرئيسية",
+  "MyCourse" : "الدورة التدريبية الخاصة بي",
+  "Search" : "بحث",
+  "Profile" : "حسابك",
+  "NoTrainerAvailable" : "لا يوجد مدربون متاحون",
+  "AllCourses" : "جميع الدورات",
+  "OK" : "موافق",
+  "QuickFilter":  "فلاتر سريعة",
+  "AllCategoriesSelected" : "تم تحديد جميع الفئات",
+  "MinimumPrice" : "السعر الأدنى",
+  "MaximumPrice" : "السعر الأقصى",
+  "Cancel": "إلغاء",
+  "Done" : "موافق",
+  "CourseNotFound" : "الدورة غير موجودة"
 
 }
