--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -46,4 +46,35 @@
   "cookiesPolicy" : "Cookies Policy",
   "cookiesDetails" : "Our Cookies Policy explains how we use cookies and similar technologies to enhance your browsing experience and improve our services. We use cookies for analytics, personalization, and targeted advertising.",
   "LoginFail" : "Login Failed",
-  "Close" : "Close"}
+  "Close" : "Close",
+  "LearningPlatformApp" : "Learning Platform App",
+  "WelcomeBack" : "Welcome Back",
+  "StartLeaning" : "Start learning now!",
+  "Categories" : "Categories",
+  "MViewCourse" : "Most Viewed Courses",
+  "LatestCAdded" : "Latest Course Added",
+  "ForYou" : "For You",
+  "PersonalInfo" : "Personal Info",
+  "LogOut" : "LogOut",
+  "SeeMore" : "see more",
+  "RecommendCFY" :"Recommend Courses For You",
+  "AllCategories" : "All Categories",
+  "AllInstructor" : "All Instructor",
+  "NoCategoriesAvailable" : "No Categories available",
+  "GoBack" : "Go Back",
+  "NoCourseAvailable" : "No Course available",
+  "HomePage" : "Home",
+  "MyCourse" : "MyCourse",
+  "Search" : "Search",
+  "Profile" : "Profile",
+  "NoTrainerAvailable" : "No Instructor available",
+  "AllCourses" : "All Courses",
+  "OK" : "OK",
+  "QuickFilter":  "Quick Filters",
+  "AllCategoriesSelected" : "All Category Selected",
+  "MinimumPrice" : "Minimum Price",
+  "MaximumPrice" : "Maximum Price",
+  "Cancel": "Cancel",
+  "Done" : "Done",
+  "CourseNotFound" : "Course not found"
+}
