--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,80 +1,89 @@
 {
-  "getStartP1" : "StudyLink: Your Ultimate Education Destination Online",
-  "getStartP2" : "SmartStudy: Your Comprehensive Digital Learning Platform",
-  "getStartP3" : "SkillBoost: Empowering You with Dynamic Online Education",
-  "getStartP4" : "LearnX: Your Gateway to Innovative Digital Learning",
-  "aboutOurApp" : "About Our App",
-  "signIn" : "Sign In",
-  "aboutOurAppFullSentence" : "About Our Application",
-  "aboutDetails" : "Embark on a transformative journey of learning and personal development through our cutting-edge learning platform app, where boundless knowledge meets endless possibilities for growth and exploration.",
-  "emailAddress" : "Email Address",
-  "password" : "Password",
-  "RememberMe" : "Remember me",
-  "forgetPassword" : "Forget Password",
-  "DoNotHaveAccount" : "Don't have an account?",
-  "Signup" : "Signup",
-  "createAccount" : "Create Account",
-  "SignupSpace" : "Sign Up",
-  "AlreadyHaveAcc" : "Already Have Account?",
-  "SuccessSignUp" : "SignUp Successfully Done",
-  "WelcomeSignUp" : "Welcome To Our Learning Platform App,Please Login To Your App",
-  "FirstName" : "First Name",
-  "LastName" : "Last Name",
-  "PlzEnterFn" : "Please enter your first name",
-  "PlzEnterLn" : "Please enter your last name",
+  "getStartP1": "StudyLink: Your Ultimate Education Destination Online",
+  "getStartP2": "SmartStudy: Your Comprehensive Digital Learning Platform",
+  "getStartP3": "SkillBoost: Empowering You with Dynamic Online Education",
+  "getStartP4": "LearnX: Your Gateway to Innovative Digital Learning",
+  "aboutOurApp": "About Our App",
+  "signIn": "Sign In",
+  "aboutOurAppFullSentence": "About Our Application",
+  "aboutDetails": "Embark on a transformative journey of learning and personal development through our cutting-edge learning platform app, where boundless knowledge meets endless possibilities for growth and exploration.",
+  "emailAddress": "Email Address",
+  "password": "Password",
+  "RememberMe": "Remember me",
+  "forgetPassword": "Forget Password",
+  "DoNotHaveAccount": "Don't have an account?",
+  "Signup": "Signup",
+  "createAccount": "Create Account",
+  "SignupSpace": "Sign Up",
+  "AlreadyHaveAcc": "Already Have Account?",
+  "SuccessSignUp": "SignUp Successfully Done",
+  "WelcomeSignUp": "Welcome To Our Learning Platform App,Please Login To Your App",
+  "FirstName": "First Name",
+  "LastName": "Last Name",
+  "PlzEnterFn": "Please enter your first name",
+  "PlzEnterLn": "Please enter your last name",
   "InvalidEmail": "Please enter your email",
-  "InvalidDomainEmail" : "Invalid email domain. Use @gmail.com or @hotmail.com",
-  "Telephone" : "Telephone",
-  "PlzEnterPhone" : "Please enter your telephone number",
-  "PlzEnterNumPhone" : "Please enter only numeric values",
-  "UserName" : "UserName",
-  "PlzEnterUserName" : "Please enter a username",
-  "Male" : "Male",
-  "Female" : "Female",
+  "InvalidDomainEmail": "Invalid email domain. Use @gmail.com or @hotmail.com",
+  "Telephone": "Telephone",
+  "PlzEnterPhone": "Please enter your telephone number",
+  "PlzEnterNumPhone": "Please enter only numeric values",
+  "UserName": "UserName",
+  "PlzEnterUserName": "Please enter a username",
+  "Male": "Male",
+  "Female": "Female",
   "PlzEnterPassword": "Please enter a password",
-  "PasswordLong" : "Password must be at least 8 characters long",
-  "PasswordLetter" : "Password must contain at least one uppercase letter",
-  "PasswordConfirm" : "Confirm Password",
-  "EnterPassAgain" : "Please enter your password again",
-  "PassNotMatch" : "Passwords do not match",
-  "ByClicking" : " By clicking in signup You agree to our ",
-  "Terms" : "Terms",
-  "TermsDetails" : "By accessing and using our services, you agree to abide by our Terms and Conditions. These terms govern your use of our platform and outline your rights and responsibilities as a user.",
-  "PrivacyPolicy" : "Privacy Policy",
-  "PrivacyDetails" : "Our Privacy Policy outlines how we collect, use, and protect your personal information when you use our services. We are committed to safeguarding your privacy and ensuring the security of your data.",
+  "PasswordLong": "Password must be at least 8 characters long",
+  "PasswordLetter": "Password must contain at least one uppercase letter",
+  "PasswordConfirm": "Confirm Password",
+  "EnterPassAgain": "Please enter your password again",
+  "PassNotMatch": "Passwords do not match",
+  "ByClicking": " By clicking in signup You agree to our ",
+  "Terms": "Terms",
+  "TermsDetails": "By accessing and using our services, you agree to abide by our Terms and Conditions. These terms govern your use of our platform and outline your rights and responsibilities as a user.",
+  "PrivacyPolicy": "Privacy Policy",
+  "PrivacyDetails": "Our Privacy Policy outlines how we collect, use, and protect your personal information when you use our services. We are committed to safeguarding your privacy and ensuring the security of your data.",
   "and": ", and ",
-  "cookiesPolicy" : "Cookies Policy",
-  "cookiesDetails" : "Our Cookies Policy explains how we use cookies and similar technologies to enhance your browsing experience and improve our services. We use cookies for analytics, personalization, and targeted advertising.",
-  "LoginFail" : "Login Failed",
-  "Close" : "Close",
-  "LearningPlatformApp" : "Learning Platform App",
-  "WelcomeBack" : "Welcome Back",
-  "StartLeaning" : "Start learning now!",
-  "Categories" : "Categories",
-  "MViewCourse" : "Most Viewed Courses",
-  "LatestCAdded" : "Latest Course Added",
-  "ForYou" : "For You",
-  "PersonalInfo" : "Personal Info",
-  "LogOut" : "LogOut",
-  "SeeMore" : "see more",
-  "RecommendCFY" :"Recommend Courses For You",
-  "AllCategories" : "All Categories",
-  "AllInstructor" : "All Instructor",
-  "NoCategoriesAvailable" : "No Categories available",
-  "GoBack" : "Go Back",
-  "NoCourseAvailable" : "No Course available",
-  "HomePage" : "Home",
-  "MyCourse" : "MyCourse",
-  "Search" : "Search",
-  "Profile" : "Profile",
-  "NoTrainerAvailable" : "No Instructor available",
-  "AllCourses" : "All Courses",
-  "OK" : "OK",
-  "QuickFilter":  "Quick Filters",
-  "AllCategoriesSelected" : "All Category Selected",
-  "MinimumPrice" : "Minimum Price",
-  "MaximumPrice" : "Maximum Price",
+  "cookiesPolicy": "Cookies Policy",
+  "cookiesDetails": "Our Cookies Policy explains how we use cookies and similar technologies to enhance your browsing experience and improve our services. We use cookies for analytics, personalization, and targeted advertising.",
+  "LoginFail": "Login Failed",
+  "Close": "Close",
+  "LearningPlatformApp": "Learning Platform App",
+  "WelcomeBack": "Welcome Back",
+  "StartLeaning": "Start learning now!",
+  "Categories": "Categories",
+  "MViewCourse": "Most Viewed Courses",
+  "LatestCAdded": "Latest Course Added",
+  "ForYou": "For You",
+  "PersonalInfo": "Personal Info",
+  "LogOut": "Logout",
+  "SeeMore": "see more",
+  "RecommendCFY": "Recommend Courses For You",
+  "AllCategories": "All Categories",
+  "AllInstructor": "All Instructor",
+  "NoCategoriesAvailable": "No Categories available",
+  "GoBack": "Go Back",
+  "NoCourseAvailable": "No Course available",
+  "HomePage": "Home",
+  "MyCourse": "MyCourse",
+  "Search": "Search",
+  "Profile": "Profile",
+  "NoTrainerAvailable": "No Instructor available",
+  "AllCourses": "All Courses",
+  "OK": "OK",
+  "QuickFilter": "Quick Filters",
+  "AllCategoriesSelected": "All Category Selected",
+  "MinimumPrice": "Minimum Price",
+  "MaximumPrice": "Maximum Price",
   "Cancel": "Cancel",
-  "Done" : "Done",
-  "CourseNotFound" : "Course not found"
+  "Done": "Done",
+  "CourseNotFound": "Course not found",
+  "settingProfile": "Setting & Profile",
+  "EditProfile": "Edit Profile",
+  "Language": "Language",
+  "ChangePassword": "Change Password",
+  "information" : "Information",
+  "name":"Name",
+  "SaveEdit" : "Save Edit",
+  "Success" : "Success",
+  "ProfileUpdateS" : "Profile updated successfully"
 }
