Adding Arabic Language

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -64,7 +64,7 @@
   "GoBack" : "ارجع",
   "NoCourseAvailable" : "لا توجد دورة متاحة",
   "HomePage" : "الصفحة الرئيسية",
-  "MyCourse" : "الدورة التدريبية الخاصة بي",
+  "MyCourse" : "الدورة التدريبية",
   "Search" : "بحث",
   "Profile" : "حسابك",
   "NoTrainerAvailable" : "لا يوجد مدربون متاحون",
@@ -85,6 +85,36 @@
   "name" : "اسمك",
   "SaveEdit" : "حفظ التعديل",
   "Success" : "أُنجز",
-  "ProfileUpdateS" : "تم تحديث الملف الشخصي بنجاح"
+  "ProfileUpdateS" : "تم تحديث الملف الشخصي بنجاح",
+  "CourseDetailDesc" : "أطلق العنان لإمكاناتك اليوم واتخذ الخطوة التالية نحو النجاح من خلال شراء دورتنا الشاملة",
+  "CourseEnroll" : "لقد امتلكت الدورة التدريبية بالفعل",
+  "EnrollNow" : "تسجيل الآن",
+  "InfoCourse" : "معلومات",
+  "Chapters" : "فصول",
+  "Quiz" : "الإختبارات",
+  "NoChapterAvailable" : "لا توجد فصول متاحة",
+  "Lesson" : "الدروس",
+  "NoLessonOfChapter" : "لا توجد دروس متاحة لهذا الفصل",
+  "NoFeedBackOfThisCourse" : "لا توجد تعليقات لهذه الدورة",
+  "RatingAndReview" : "التقييم والمراجعة",
+  "RatingDesc" : "أطلق العنان لإمكانات التعلم التعاوني من خلال المساهمة بأفكارك وخبراتك الفريدة في مراجعة الدورة التدريبية. انضم إلى مجتمعنا النابض بالحياة في تشكيل مستقبل التعليم عبر الإنترنت، بمراجعة واحدة في كل مرة.",
+  "ShowMore" : "أظهر المزيد",
+  "ShowLess" : "أظهر أقل",
+  "HourCourse" : "ساعات",
+  "Lessons" : "دروس",
+  "Certification" : "الشهادة متاحة",
+  "CourseLanguage" : "عربي",
+  "AboutCourse" : "حول الدورة",
+  "NoDetailYet" : "لا توجد تفاصيل بعد",
+  "Score" : "نتيجة:",
+  "Congrats" : "تهانينا!",
+  "CongratsDetails" : "لقد اجتزت الامتحان بنجاح. أحسنت!",
+  "BackToHome" : "العودة إلى الصفحة الرئيسية",
+  "DidNotPass" : "آسف، أنت لم تنجح في الامتحان.",
+  "NoQuizAddYet" : "لم تتم إضافة أي اختبار حتى الآن لهذا الفصل",
+  "quiz" : "اختبار",
+  "challenge" : "تحدي",
+  "SubmitQuiz" : "إرسال الاختبار",
+  "NoQuizAvailable" : "لا يوجد اختبار متاح"
 
 }
