--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -85,5 +85,35 @@
   "name":"Name",
   "SaveEdit" : "Save Edit",
   "Success" : "Success",
-  "ProfileUpdateS" : "Profile updated successfully"
+  "ProfileUpdateS" : "Profile updated successfully",
+  "CourseDetailDesc" : "Unlock your potential today and take the next step towards success by purchasing our comprehensive course",
+  "CourseEnroll" : "You Already Have This Course",
+  "EnrollNow" : "Enroll Now",
+  "InfoCourse" : "Info",
+  "Chapters" : "Chapters",
+  "Quiz" : "Quizzes",
+  "NoChapterAvailable" : "No chapters available",
+  "Lesson" : "Lesson",
+  "NoLessonOfChapter" : "No lessons available for this chapter",
+  "NoFeedBackOfThisCourse" : "no feedback for this course",
+  "RatingAndReview" : "Rating & Review",
+  "RatingDesc" : "Unlock the potential of collaborative learning by contributing your unique insights and experiences to Course Review. Join our vibrant community in shaping the future of online education, one review at a time.",
+  "ShowMore" : "show more",
+  "ShowLess" : "show less",
+  "HourCourse" : "Hours",
+  "Lessons" : "Lessons",
+  "Certification" : "Certification Available",
+  "CourseLanguage" : "Arabic",
+  "AboutCourse" : "About The Course",
+  "NoDetailYet" : "No Details Yet",
+  "Score" : "Score:",
+  "Congrats" : "Congratulations!",
+  "CongratsDetails" : "You have successfully passed the exam. Well done!",
+  "BackToHome" : "Back To HomePage",
+  "DidNotPass" : "Sorry, you did not pass the exam.",
+  "NoQuizAddYet" : "No quiz added yet for this chapter",
+  "quiz" : "Quiz",
+  "challenge" : "Challenge",
+  "SubmitQuiz" : "Submit Quiz",
+  "NoQuizAvailable" : "No Quiz Available"
 }
