Adding Favorite Course page for User, Language Finish

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -124,6 +124,8 @@
   "English" : "إنجليزي",
   "restartApp" : "إعادة تشغيل التطبيق",
   "restartAppDetails" : "تحتاج إلى إعادة تشغيل التطبيق ليصبح تغيير اللغة ساري المفعول.",
-  "YouDoNotHaveCourse" : "ليس لديك دورات بعد! اشتري الآن"
+  "YouDoNotHaveCourse" : "ليس لديك دورات بعد! اشتري الآن",
+  "NoFavCourse" : "لم تقم بإضافة أي دورة في المفضلة"
+
 
 }
